<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudentMappingDB</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="header">Student Mapping System</string>
    <string name="homeFooter">Student Home System</string>
    <string name="btnHomeAdd">Add</string>
    <string name="btnHomeUpdate">Update</string>
    <string name="btnHomeDisplay">Display</string>
    <string name="btnHomeSearch">Search</string>
    <string name="btnHomeDelete">Delete</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="addFooter">Add Page</string>
    <string name="btnAddCollege">Add College</string>
    <string name="btnAddStudent">Add Student</string>
    <string name="btnHome">Home</string>
    <string name="title_activity_add_college">AddCollege</string>
    <string name="addClgFooter">Add College Page</string>
    <string name="addClgName">College Name</string>
    <string name="addClgAddress">College Address</string>
    <string name="addClgContact">Contact Number</string>
    <string name="addClgLongitude">Longitude</string>
    <string name="addClgLatitude">Latitude</string>
    <string name="btnClgAdd">Add</string>
    <string name="btnClgClear">Clear</string>
    <string name="displayFooter">Display College List</string>
    <string name="title_activity_display_data">DisplayData</string>
    <string name="DisplayFooter">Display Selection</string>
    <string name="DisplayCollege">Display College List</string>
    <string name="DisplayStudent">Display Student List</string>
    <string name="title_activity_add_student">AddStudent</string>
    <string name="addStdFooter">Add Student Page</string>
    <string name="addStdName">Student Name</string>
    <string name="addStdAddress">Student Address</string>
    <string name="addStdContact">Contact Number</string>
    <string name="addStdGen">Student Gender</string>
    <string name="addStdGenMale">Male</string>
    <string name="addStdGenFemale">Female</string>
    <string name="addStdEmail">Student EmailID</string>
    <string name="btnStdAdd">Add</string>
    <string name="btnStdClear">Clear</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="btnDelClg">Delete College</string>
    <string name="btnDelStd">Delete Student</string>
    <string name="delFooter">Delete Page</string>
    <string name="title_activity_delete_college">DeleteCollege</string>
    <string name="delClgFooter">Delete College Page</string>
    <string name="delClgName">College Name</string>
    <string name="btnDelClgName">Delete</string>
    <string name="btnDelClgClear">Clear</string>
    <string name="title_activity_delete_student">DeleteStudent</string>
    <string name="delStdFooter">Delete Student Page</string>
    <string name="delStdName">Student Name</string>
    <string name="btnDelStdName">Delete</string>
    <string name="btnDelStdClear">Clear</string>
    <string name="title_activity_search">DeleteActivity</string>
    <string name="btnSearchClg">Search College</string>
    <string name="btnSearchStd">Serach Student</string>
    <string name="searchFooter">Search Page</string>
    <string name="title_activity_search_college">SearchCollege</string>
    <string name="searchClgFooter">Search College Page</string>
    <string name="searchClgName">College Name</string>
    <string name="btnSearchClgName">Search</string>
    <string name="btnSearchClgClear">Clear</string>
    <string name="title_activity_search_student">SearchStudent</string>
    <string name="searchStdFooter">Search Student Page</string>
    <string name="searchStdName">Student Name</string>
    <string name="btnSearchStdName">Search</string>
    <string name="btnSearchStdClear">Clear</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="btnUpdateClg">Update College</string>
    <string name="btnUpdateStd">Update Student</string>
    <string name="updateFooter">Update Page</string>
    <string name="title_activity_update_college">UpdateCollege</string>
    <string name="updateClgFooter">Update College Page</string>
    <string name="updateClgName">College Name</string>
    <string name="btnLoadClgName">Load</string>
    <string name="btnUpdateClgClear">Clear</string>
    <string name="btnUpdateClgName">Update</string>
    <string name="title_activity_update_student">UpdateStudent</string>
    <string name="updateStdFooter">Update Student Page</string>
    <string name="updateStdName">Student Name</string>
    <string name="btnLoadStdName">Load</string>
    <string name="btnUpdateStdClear">Clear</string>
    <string name="btnUpdateStdName">Update</string>
    <string name="title_activity_show_on_map_collegelist">ShowOnMapCollegelist</string>

</resources>
