<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.studentmappingdb.DisplayData" >

    
    
     <RelativeLayout
        android:id="@+id/displayHeader"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="#48CCCD" >

        <TextView
            android:id="@+id/displayHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/header"
            android:textColor="#000000"
            android:textSize="25dp" />
    </RelativeLayout>

    <!-- Footer -->

    <RelativeLayout
        android:id="@+id/displayFooter"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="#48CCCD" >

        <TextView
            android:id="@+id/displayFooterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/DisplayFooter"
            android:textColor="#000000"
            android:textSize="25dp" />
    </RelativeLayout>

    <!-- Body -->

    <RelativeLayout
        android:id="@+id/displayBody"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/addFooter"
        android:layout_below="@+id/addHeader"
        android:layout_centerHorizontal="true"
        android:paddingTop="60dp"
        android:background="@android:color/transparent" >

        <Button
            android:id="@+id/btnDisplayCollege"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="25dp"
            android:background="#4EE2EC"
            android:text="@string/DisplayCollege"
            android:textColor="#000000" 
           android:textAllCaps="false" />

        <Button
            android:id="@+id/btnDisplayStudent"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_below="@+id/btnDisplayCollege"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="30dp"
            android:background="#4EE2EC"
            android:text="@string/DisplayStudent"
            android:textColor="#000000"
            android:textAllCaps="false"
             />
         <Button
            android:id="@+id/btnDisplayHome"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_below="@+id/btnDisplayStudent"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="30dp"
            android:background="#4EE2EC"
            android:text="@string/btnHome"
            android:textColor="#000000"
            android:textAllCaps="false"
             />
         
      
    </RelativeLayout>
    
    
</RelativeLayout>
