<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/displayHeader"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="#48CCCD" >

        <TextView
            android:id="@+id/displayHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/header"
            android:textColor="#000000"
            android:textSize="25dp" />
    </RelativeLayout>

    <!-- Footer -->

    <RelativeLayout
        android:id="@+id/displayFooter"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="#48CCCD" >

        <TextView
            android:id="@+id/displayFooterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/DisplayStudent"
            android:textColor="#000000"
            android:textSize="25dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/displayStdBody"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/displayFooter"
        android:layout_below="@+id/displayHeader"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent" >

        <ListView
            android:id="@+id/DisplayStudentList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" >
        </ListView>
    </RelativeLayout>
	 <RelativeLayout
        android:id="@+id/displayHome"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_above="@+id/displayFooter"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent" >
        <Button
            android:id="@+id/btnHome"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:background="#4EE2EC"
            android:text="@string/btnHome"
            android:textColor="#000000" />
    </RelativeLayout>
    
</RelativeLayout>